# grove

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  HANDOFF.md  Makefile  PROPOSED_CODE_FILE_REORGANIZATION_PLAN.md  README.md  flake.nix  lefthook.yml  release-please-config.json
.githooks/: pre-commit  pre-push
.github/workflows/: release-please.yml  release.yml
docs/: PRD.md  agent-first-lifecycle-plan.md  cache-eviction.md  config-migration-prompt.md  debug-replay.md  deep-module-refactor-baseline.md  implementation-plan-sidecar-ftui-alignment.md  implementation-plan.md  remote-operations.md  simplification-plan.md  simplify.md  workspace-scale-baseline.json  workspace-scale-benchmarks.md
docs/adr/: 003-interactive-polling-strategy.md  004-workspace-metadata-and-lifecycle-contract.md  009-multi-project-workspace-model.md  012-remote-interactive-input-pipeline.md  (+1 more)
nix/: package.nix
scripts/: check-codex-flicker.sh  check-restart-reattach.sh
src/: adapters.rs  agent_runtime.rs  config.rs  domain.rs  event_log.rs  hardening.rs  interactive.rs  lib.rs  main.rs  main_tests.rs  mouse.rs  preview.rs  state.rs  test_support.rs  tui.rs  workspace_lifecycle.rs  zellij_emulator.rs
tests/: agent_cli.rs  cli_contract_golden.rs  debug_record_cli_smoke.rs  event_log_cli_smoke.rs  event_log_reader.rs  groved_socket_smoke.rs  hello_cli.rs  root_command_tree_cli.rs  startup_reconciliation.rs  workspace_create_cli.rs  workspace_delete_cli.rs  workspace_edit_cli.rs  workspace_list_cli.rs  workspace_list_daemon_cli.rs  workspace_merge_cli.rs  workspace_update_cli.rs
(+362 files in other folders)
